--- a/notebooks/analysis_network.ipynb
+++ b/notebooks/analysis_network.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "id": "55752dac",
    "metadata": {},
    "outputs": [
@@ -10,8 +10,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading ../data/output/Somerset_driving_edge_graph.csv...\n",
-      "Loaded 16,301 rows.\n"
+      "Loading ../data/output/Burnaby_driving_edge_graph.csv...\n",
+      "Loaded 98,901 rows.\n"
      ]
     },
     {
@@ -42,28 +42,28 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1516</td>\n",
-       "      <td>3778</td>\n",
+       "      <td>30721</td>\n",
+       "      <td>30720</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1166</td>\n",
-       "      <td>669</td>\n",
+       "      <td>20799</td>\n",
+       "      <td>1302</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>5203</td>\n",
-       "      <td>5208</td>\n",
+       "      <td>8066</td>\n",
+       "      <td>8061</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>937</td>\n",
-       "      <td>5</td>\n",
+       "      <td>15745</td>\n",
+       "      <td>15742</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>965</td>\n",
-       "      <td>2345</td>\n",
+       "      <td>23542</td>\n",
+       "      <td>23545</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -71,14 +71,14 @@
       ],
       "text/plain": [
        "   incoming_edge  outgoing_edge\n",
-       "0           1516           3778\n",
-       "1           1166            669\n",
-       "2           5203           5208\n",
-       "3            937              5\n",
-       "4            965           2345"
+       "0          30721          30720\n",
+       "1          20799           1302\n",
+       "2           8066           8061\n",
+       "3          15745          15742\n",
+       "4          23542          23545"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -91,7 +91,7 @@
     "# Path to the CSV file\n",
     "# Adjust path if necessary. Assuming we are in projects/osm-to-road-network/notebooks\n",
     "# and the file is in projects/osm_to_road_network/output\n",
-    "CSV_PATH = \"../data/output/Somerset_driving_edge_graph.csv\"\n",
+    "CSV_PATH = \"../data/output/Burnaby_driving_edge_graph.csv\"\n",
     "\n",
     "print(f\"Loading {CSV_PATH}...\")\n",
     "df = pd.read_csv(CSV_PATH)\n",
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "id": "095ef484",
    "metadata": {},
    "outputs": [
@@ -110,7 +110,7 @@
      "output_type": "stream",
      "text": [
       "Building Graph...\n",
-      "Graph built: 5,900 nodes, 16,301 edges\n"
+      "Graph built: 34,965 nodes, 98,901 edges\n"
      ]
     }
    ],
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 20,
    "id": "5d365751",
    "metadata": {},
    "outputs": [
@@ -137,12 +137,12 @@
      "output_type": "stream",
      "text": [
       "Analyzing Connectivity...\n",
-      "Number of Weakly Connected Components: 11\n",
-      "Size of largest WCC: 4,706\n",
-      "Top 10 WCC sizes: [4706, 1014, 96, 26, 24, 20, 6, 2, 2, 2]\n",
-      "Number of Strongly Connected Components: 39\n",
-      "Size of largest SCC: 4,694\n",
-      "Top 10 SCC sizes: [4694, 672, 318, 96, 26, 24, 20, 6, 6, 4]\n"
+      "Number of Weakly Connected Components: 2\n",
+      "Size of largest WCC: 34,925\n",
+      "Top 10 WCC sizes: [34925, 40]\n",
+      "Number of Strongly Connected Components: 2\n",
+      "Size of largest SCC: 34,925\n",
+      "Top 10 SCC sizes: [34925, 40]\n"
      ]
     }
    ],
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 25,
    "id": "a9858339",
    "metadata": {},
    "outputs": [
@@ -200,8 +200,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading ../data/output/Somerset_driving_edges_indexed.csv...\n",
-      "Loaded 5,900 rows.\n"
+      "Loading ../data/output/Burnaby_driving_edges_indexed.csv...\n",
+      "Loaded 34,965 rows.\n"
      ]
     },
     {
@@ -226,9 +226,6 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>edge_index</th>\n",
-       "      <th>source</th>\n",
-       "      <th>target</th>\n",
-       "      <th>id</th>\n",
        "      <th>length</th>\n",
        "      <th>maxspeed</th>\n",
        "      <th>geometry</th>\n",
@@ -237,112 +234,103 @@
        "      <th>incoming_cell</th>\n",
        "      <th>outgoing_cell</th>\n",
        "      <th>lca_res</th>\n",
+       "      <th>id</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>0</td>\n",
-       "      <td>167790704</td>\n",
-       "      <td>167862530</td>\n",
-       "      <td>(167790704, 167862530)</td>\n",
-       "      <td>80.287</td>\n",
-       "      <td>60.0</td>\n",
-       "      <td>LINESTRING (-84.60797882080078 37.091793060302...</td>\n",
-       "      <td>secondary</td>\n",
-       "      <td>4.817220</td>\n",
-       "      <td>645224977384028320</td>\n",
-       "      <td>645224977383611141</td>\n",
+       "      <td>98.503</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>LINESTRING (-122.92154693603516 49.27764129638...</td>\n",
+       "      <td>tertiary_link</td>\n",
+       "      <td>11.82036</td>\n",
+       "      <td>644733695069033029</td>\n",
+       "      <td>644733695069283890</td>\n",
        "      <td>8</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>1</td>\n",
-       "      <td>167790704</td>\n",
-       "      <td>167790717</td>\n",
-       "      <td>(167790704, 167790717)</td>\n",
-       "      <td>102.097</td>\n",
-       "      <td>60.0</td>\n",
-       "      <td>LINESTRING (-84.60797882080078 37.091793060302...</td>\n",
-       "      <td>secondary</td>\n",
-       "      <td>6.125820</td>\n",
-       "      <td>645224977383614665</td>\n",
-       "      <td>645224977383611141</td>\n",
-       "      <td>10</td>\n",
+       "      <td>53.933</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>LINESTRING (-122.92154693603516 49.27764129638...</td>\n",
+       "      <td>tertiary</td>\n",
+       "      <td>6.47196</td>\n",
+       "      <td>644733695069345412</td>\n",
+       "      <td>644733695069283890</td>\n",
+       "      <td>9</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>2</td>\n",
-       "      <td>167790704</td>\n",
-       "      <td>167825885</td>\n",
-       "      <td>(167790704, 167825885)</td>\n",
-       "      <td>323.104</td>\n",
+       "      <td>684.050</td>\n",
        "      <td>50.0</td>\n",
-       "      <td>LINESTRING (-84.60797882080078 37.091793060302...</td>\n",
+       "      <td>LINESTRING (-122.92154693603516 49.27764129638...</td>\n",
        "      <td>tertiary</td>\n",
-       "      <td>23.263488</td>\n",
-       "      <td>645224977384658840</td>\n",
-       "      <td>645224977383611141</td>\n",
-       "      <td>8</td>\n",
+       "      <td>49.25160</td>\n",
+       "      <td>644733695063774494</td>\n",
+       "      <td>644733695069283890</td>\n",
+       "      <td>7</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>3</td>\n",
-       "      <td>167790717</td>\n",
-       "      <td>167790719</td>\n",
-       "      <td>(167790717, 167790719)</td>\n",
-       "      <td>111.432</td>\n",
-       "      <td>60.0</td>\n",
-       "      <td>LINESTRING (-84.60697937011719 37.091552734375...</td>\n",
-       "      <td>secondary</td>\n",
-       "      <td>6.685920</td>\n",
-       "      <td>645224977383653531</td>\n",
-       "      <td>645224977383614665</td>\n",
-       "      <td>9</td>\n",
+       "      <td>35.488</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>LINESTRING (-122.92096710205078 49.27793121337...</td>\n",
+       "      <td>tertiary</td>\n",
+       "      <td>4.25856</td>\n",
+       "      <td>644733695069337920</td>\n",
+       "      <td>644733695069345412</td>\n",
+       "      <td>10</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>4</td>\n",
-       "      <td>167790717</td>\n",
-       "      <td>167862553</td>\n",
-       "      <td>(167790717, 167862553)</td>\n",
-       "      <td>84.317</td>\n",
+       "      <td>53.933</td>\n",
        "      <td>30.0</td>\n",
-       "      <td>LINESTRING (-84.60697937011719 37.091552734375...</td>\n",
-       "      <td>residential</td>\n",
-       "      <td>10.118040</td>\n",
-       "      <td>645224977383600429</td>\n",
-       "      <td>645224977383614665</td>\n",
-       "      <td>10</td>\n",
+       "      <td>LINESTRING (-122.92096710205078 49.27793121337...</td>\n",
+       "      <td>tertiary</td>\n",
+       "      <td>6.47196</td>\n",
+       "      <td>644733695069283890</td>\n",
+       "      <td>644733695069345412</td>\n",
+       "      <td>9</td>\n",
+       "      <td>4</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   edge_index     source     target                      id   length  \\\n",
-       "0           0  167790704  167862530  (167790704, 167862530)   80.287   \n",
-       "1           1  167790704  167790717  (167790704, 167790717)  102.097   \n",
-       "2           2  167790704  167825885  (167790704, 167825885)  323.104   \n",
-       "3           3  167790717  167790719  (167790717, 167790719)  111.432   \n",
-       "4           4  167790717  167862553  (167790717, 167862553)   84.317   \n",
+       "   edge_index   length  maxspeed  \\\n",
+       "0           0   98.503      30.0   \n",
+       "1           1   53.933      30.0   \n",
+       "2           2  684.050      50.0   \n",
+       "3           3   35.488      30.0   \n",
+       "4           4   53.933      30.0   \n",
        "\n",
-       "   maxspeed                                           geometry      highway  \\\n",
-       "0      60.0  LINESTRING (-84.60797882080078 37.091793060302...    secondary   \n",
-       "1      60.0  LINESTRING (-84.60797882080078 37.091793060302...    secondary   \n",
-       "2      50.0  LINESTRING (-84.60797882080078 37.091793060302...     tertiary   \n",
-       "3      60.0  LINESTRING (-84.60697937011719 37.091552734375...    secondary   \n",
-       "4      30.0  LINESTRING (-84.60697937011719 37.091552734375...  residential   \n",
+       "                                            geometry        highway      cost  \\\n",
+       "0  LINESTRING (-122.92154693603516 49.27764129638...  tertiary_link  11.82036   \n",
+       "1  LINESTRING (-122.92154693603516 49.27764129638...       tertiary   6.47196   \n",
+       "2  LINESTRING (-122.92154693603516 49.27764129638...       tertiary  49.25160   \n",
+       "3  LINESTRING (-122.92096710205078 49.27793121337...       tertiary   4.25856   \n",
+       "4  LINESTRING (-122.92096710205078 49.27793121337...       tertiary   6.47196   \n",
        "\n",
-       "        cost       incoming_cell       outgoing_cell  lca_res  \n",
-       "0   4.817220  645224977384028320  645224977383611141        8  \n",
-       "1   6.125820  645224977383614665  645224977383611141       10  \n",
-       "2  23.263488  645224977384658840  645224977383611141        8  \n",
-       "3   6.685920  645224977383653531  645224977383614665        9  \n",
-       "4  10.118040  645224977383600429  645224977383614665       10  "
+       "        incoming_cell       outgoing_cell  lca_res  id  \n",
+       "0  644733695069033029  644733695069283890        8   0  \n",
+       "1  644733695069345412  644733695069283890        9   1  \n",
+       "2  644733695063774494  644733695069283890        7   2  \n",
+       "3  644733695069337920  644733695069345412       10   3  \n",
+       "4  644733695069283890  644733695069345412        9   4  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -355,81 +343,12 @@
     "# Path to the CSV file\n",
     "# Adjust path if necessary. Assuming we are in projects/osm-to-road-network/notebooks\n",
     "# and the file is in projects/osm_to_road_network/output\n",
-    "CSV_PATH = \"../data/output/Somerset_driving_edges_indexed.csv\"\n",
+    "CSV_PATH = \"../data/output/Burnaby_driving_edges_indexed.csv\"\n",
     "\n",
     "print(f\"Loading {CSV_PATH}...\")\n",
     "df = pd.read_csv(CSV_PATH)\n",
     "print(f\"Loaded {len(df):,} rows.\")\n",
     "df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "a2ddbcb7",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Building Graph...\n",
-      "Graph built: 2,398 nodes, 5,900 edges\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"Building Graph...\")\n",
-    "G = nx.DiGraph()\n",
-    "\n",
-    "# The CSV contains pairs of edges: incoming_edge -> outgoing_edge\n",
-    "# We treat each 'edge' string as a node in our connectivity graph.\n",
-    "edges = df[['source', 'target']].values\n",
-    "G.add_edges_from(edges)\n",
-    "\n",
-    "print(f\"Graph built: {G.number_of_nodes():,} nodes, {G.number_of_edges():,} edges\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "4541a00a",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Analyzing Connectivity...\n",
-      "Number of Weakly Connected Components: 11\n",
-      "Size of largest WCC: 1,911\n",
-      "Top 10 WCC sizes: [1911, 397, 42, 14, 12, 10, 4, 2, 2, 2]\n",
-      "Number of Strongly Connected Components: 29\n",
-      "Size of largest SCC: 1,902\n",
-      "Top 10 SCC sizes: [1902, 271, 112, 42, 14, 12, 10, 4, 4, 3]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"Analyzing Connectivity...\")\n",
-    "\n",
-    "# Weakly Connected Components\n",
-    "wcc = list(nx.weakly_connected_components(G))\n",
-    "wcc_sizes = sorted([len(c) for c in wcc], reverse=True)\n",
-    "\n",
-    "print(f\"Number of Weakly Connected Components: {len(wcc):,}\")\n",
-    "if wcc_sizes:\n",
-    "    print(f\"Size of largest WCC: {wcc_sizes[0]:,}\")\n",
-    "    print(f\"Top 10 WCC sizes: {wcc_sizes[:10]}\")\n",
-    "\n",
-    "# Strongly Connected Components\n",
-    "scc = list(nx.strongly_connected_components(G))\n",
-    "scc_sizes = sorted([len(c) for c in scc], reverse=True)\n",
-    "\n",
-    "print(f\"Number of Strongly Connected Components: {len(scc):,}\")\n",
-    "if scc_sizes:\n",
-    "    print(f\"Size of largest SCC: {scc_sizes[0]:,}\")\n",
-    "    print(f\"Top 10 SCC sizes: {scc_sizes[:10]}\")\n"
    ]
   }
  ],
