add boundary area for districts in output result

--- a/notebooks/analysis_network.ipynb
+++ b/notebooks/analysis_network.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "id": "55752dac",
    "metadata": {},
    "outputs": [
@@ -78,7 +78,7 @@
        "4          23542          23545"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "id": "095ef484",
    "metadata": {},
    "outputs": [
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "id": "5d365751",
    "metadata": {},
    "outputs": [
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "id": "a9858339",
    "metadata": {},
    "outputs": [
@@ -330,7 +330,7 @@
        "4  644733695069283890  644733695069345412        9   4  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -350,11 +350,264 @@
     "print(f\"Loaded {len(df):,} rows.\")\n",
     "df.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "visualize_boundary",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading boundary from ../data/output/all_Vancouver_driving_boundary.geojson...\n",
+      "Plotting boundary...\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div style=\"width:100%;\"><div style=\"position:relative;width:100%;height:0;padding-bottom:60%;\"><span style=\"color:#565656\">Make this Notebook Trusted to load map: File -> Trust Notebook</span><iframe srcdoc=\"&lt;!DOCTYPE html&gt;\n",
+       "&lt;html&gt;\n",
+       "&lt;head&gt;\n",
+       "    \n",
+       "    &lt;meta http-equiv=&quot;content-type&quot; content=&quot;text/html; charset=UTF-8&quot; /&gt;\n",
+       "    &lt;script src=&quot;https://cdn.jsdelivr.net/npm/leaflet@1.9.3/dist/leaflet.js&quot;&gt;&lt;/script&gt;\n",
+       "    &lt;script src=&quot;https://code.jquery.com/jquery-3.7.1.min.js&quot;&gt;&lt;/script&gt;\n",
+       "    &lt;script src=&quot;https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js&quot;&gt;&lt;/script&gt;\n",
+       "    &lt;script src=&quot;https://cdnjs.cloudflare.com/ajax/libs/Leaflet.awesome-markers/2.0.2/leaflet.awesome-markers.js&quot;&gt;&lt;/script&gt;\n",
+       "    &lt;link rel=&quot;stylesheet&quot; href=&quot;https://cdn.jsdelivr.net/npm/leaflet@1.9.3/dist/leaflet.css&quot;/&gt;\n",
+       "    &lt;link rel=&quot;stylesheet&quot; href=&quot;https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css&quot;/&gt;\n",
+       "    &lt;link rel=&quot;stylesheet&quot; href=&quot;https://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css&quot;/&gt;\n",
+       "    &lt;link rel=&quot;stylesheet&quot; href=&quot;https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.2.0/css/all.min.css&quot;/&gt;\n",
+       "    &lt;link rel=&quot;stylesheet&quot; href=&quot;https://cdnjs.cloudflare.com/ajax/libs/Leaflet.awesome-markers/2.0.2/leaflet.awesome-markers.css&quot;/&gt;\n",
+       "    &lt;link rel=&quot;stylesheet&quot; href=&quot;https://cdn.jsdelivr.net/gh/python-visualization/folium/folium/templates/leaflet.awesome.rotate.min.css&quot;/&gt;\n",
+       "    \n",
+       "            &lt;meta name=&quot;viewport&quot; content=&quot;width=device-width,\n",
+       "                initial-scale=1.0, maximum-scale=1.0, user-scalable=no&quot; /&gt;\n",
+       "            &lt;style&gt;\n",
+       "                #map_cfaf00315204c37702817dd4e3a28a5c {\n",
+       "                    position: relative;\n",
+       "                    width: 100.0%;\n",
+       "                    height: 100.0%;\n",
+       "                    left: 0.0%;\n",
+       "                    top: 0.0%;\n",
+       "                }\n",
+       "                .leaflet-container { font-size: 1rem; }\n",
+       "            &lt;/style&gt;\n",
+       "\n",
+       "            &lt;style&gt;html, body {\n",
+       "                width: 100%;\n",
+       "                height: 100%;\n",
+       "                margin: 0;\n",
+       "                padding: 0;\n",
+       "            }\n",
+       "            &lt;/style&gt;\n",
+       "\n",
+       "            &lt;style&gt;#map {\n",
+       "                position:absolute;\n",
+       "                top:0;\n",
+       "                bottom:0;\n",
+       "                right:0;\n",
+       "                left:0;\n",
+       "                }\n",
+       "            &lt;/style&gt;\n",
+       "\n",
+       "            &lt;script&gt;\n",
+       "                L_NO_TOUCH = false;\n",
+       "                L_DISABLE_3D = false;\n",
+       "            &lt;/script&gt;\n",
+       "\n",
+       "        \n",
+       "    \n",
+       "                    &lt;style&gt;\n",
+       "                        .foliumtooltip {\n",
+       "                            \n",
+       "                        }\n",
+       "                       .foliumtooltip table{\n",
+       "                            margin: auto;\n",
+       "                        }\n",
+       "                        .foliumtooltip tr{\n",
+       "                            text-align: left;\n",
+       "                        }\n",
+       "                        .foliumtooltip th{\n",
+       "                            padding: 2px; padding-right: 8px;\n",
+       "                        }\n",
+       "                    &lt;/style&gt;\n",
+       "            \n",
+       "&lt;/head&gt;\n",
+       "&lt;body&gt;\n",
+       "    \n",
+       "    \n",
+       "            &lt;div class=&quot;folium-map&quot; id=&quot;map_cfaf00315204c37702817dd4e3a28a5c&quot; &gt;&lt;/div&gt;\n",
+       "        \n",
+       "&lt;/body&gt;\n",
+       "&lt;script&gt;\n",
+       "    \n",
+       "    \n",
+       "            var map_cfaf00315204c37702817dd4e3a28a5c = L.map(\n",
+       "                &quot;map_cfaf00315204c37702817dd4e3a28a5c&quot;,\n",
+       "                {\n",
+       "                    center: [49.20810890197754, -122.90789031982422],\n",
+       "                    crs: L.CRS.EPSG3857,\n",
+       "                    ...{\n",
+       "  &quot;zoom&quot;: 10,\n",
+       "  &quot;zoomControl&quot;: true,\n",
+       "  &quot;preferCanvas&quot;: false,\n",
+       "}\n",
+       "\n",
+       "                }\n",
+       "            );\n",
+       "            L.control.scale().addTo(map_cfaf00315204c37702817dd4e3a28a5c);\n",
+       "\n",
+       "            \n",
+       "\n",
+       "        \n",
+       "    \n",
+       "            var tile_layer_71841e32dbb8aee4cbe69a64df9ad913 = L.tileLayer(\n",
+       "                &quot;https://tile.openstreetmap.org/{z}/{x}/{y}.png&quot;,\n",
+       "                {\n",
+       "  &quot;minZoom&quot;: 0,\n",
+       "  &quot;maxZoom&quot;: 19,\n",
+       "  &quot;maxNativeZoom&quot;: 19,\n",
+       "  &quot;noWrap&quot;: false,\n",
+       "  &quot;attribution&quot;: &quot;\\u0026copy; \\u003ca href=\\&quot;https://www.openstreetmap.org/copyright\\&quot;\\u003eOpenStreetMap\\u003c/a\\u003e contributors&quot;,\n",
+       "  &quot;subdomains&quot;: &quot;abc&quot;,\n",
+       "  &quot;detectRetina&quot;: false,\n",
+       "  &quot;tms&quot;: false,\n",
+       "  &quot;opacity&quot;: 1,\n",
+       "}\n",
+       "\n",
+       "            );\n",
+       "        \n",
+       "    \n",
+       "            tile_layer_71841e32dbb8aee4cbe69a64df9ad913.addTo(map_cfaf00315204c37702817dd4e3a28a5c);\n",
+       "        \n",
+       "    \n",
+       "            map_cfaf00315204c37702817dd4e3a28a5c.fitBounds(\n",
+       "                [[48.98423385620117, -123.29228210449219], [49.431983947753906, -122.52349853515625]],\n",
+       "                {}\n",
+       "            );\n",
+       "        \n",
+       "    \n",
+       "        function geo_json_5fa1411ab480a88566984a73ec890603_styler(feature) {\n",
+       "            switch(feature.id) {\n",
+       "                default:\n",
+       "                    return {&quot;fillOpacity&quot;: 0.5, &quot;weight&quot;: 2};\n",
+       "            }\n",
+       "        }\n",
+       "        function geo_json_5fa1411ab480a88566984a73ec890603_highlighter(feature) {\n",
+       "            switch(feature.id) {\n",
+       "                default:\n",
+       "                    return {&quot;fillOpacity&quot;: 0.75};\n",
+       "            }\n",
+       "        }\n",
+       "        function geo_json_5fa1411ab480a88566984a73ec890603_pointToLayer(feature, latlng) {\n",
+       "            var opts = {\n",
+       "  &quot;stroke&quot;: true,\n",
+       "  &quot;color&quot;: &quot;#3388ff&quot;,\n",
+       "  &quot;weight&quot;: 3,\n",
+       "  &quot;opacity&quot;: 1.0,\n",
+       "  &quot;lineCap&quot;: &quot;round&quot;,\n",
+       "  &quot;lineJoin&quot;: &quot;round&quot;,\n",
+       "  &quot;dashArray&quot;: null,\n",
+       "  &quot;dashOffset&quot;: null,\n",
+       "  &quot;fill&quot;: true,\n",
+       "  &quot;fillColor&quot;: &quot;#3388ff&quot;,\n",
+       "  &quot;fillOpacity&quot;: 0.2,\n",
+       "  &quot;fillRule&quot;: &quot;evenodd&quot;,\n",
+       "  &quot;bubblingMouseEvents&quot;: true,\n",
+       "  &quot;radius&quot;: 2,\n",
+       "};\n",
+       "            \n",
+       "            let style = geo_json_5fa1411ab480a88566984a73ec890603_styler(feature)\n",
+       "            Object.assign(opts, style)\n",
+       "            \n",
+       "            return new L.CircleMarker(latlng, opts)\n",
+       "        }\n",
+       "\n",
+       "        function geo_json_5fa1411ab480a88566984a73ec890603_onEachFeature(feature, layer) {\n",
+       "\n",
+       "            layer.on({\n",
+       "                mouseout: function(e) {\n",
+       "                    if(typeof e.target.setStyle === &quot;function&quot;){\n",
+       "                            geo_json_5fa1411ab480a88566984a73ec890603.resetStyle(e.target);\n",
+       "                    }\n",
+       "                },\n",
+       "                mouseover: function(e) {\n",
+       "                    if(typeof e.target.setStyle === &quot;function&quot;){\n",
+       "                        const highlightStyle = geo_json_5fa1411ab480a88566984a73ec890603_highlighter(e.target.feature)\n",
+       "                        e.target.setStyle(highlightStyle);\n",
+       "                    }\n",
+       "                },\n",
+       "            });\n",
+       "        };\n",
+       "        var geo_json_5fa1411ab480a88566984a73ec890603 = L.geoJson(null, {\n",
+       "                onEachFeature: geo_json_5fa1411ab480a88566984a73ec890603_onEachFeature,\n",
+       "            \n",
+       "                style: geo_json_5fa1411ab480a88566984a73ec890603_styler,\n",
+       "                pointToLayer: geo_json_5fa1411ab480a88566984a73ec890603_pointToLayer,\n",
+       "            ...{\n",
+       "}\n",
+       "        });\n",
+       "\n",
+       "        function geo_json_5fa1411ab480a88566984a73ec890603_add (data) {\n",
+       "            geo_json_5fa1411ab480a88566984a73ec890603\n",
+       "                .addData(data);\n",
+       "        }\n",
+       "            geo_json_5fa1411ab480a88566984a73ec890603_add({&quot;bbox&quot;: [-123.29228210449219, 48.98423385620117, -122.52349853515625, 49.431983947753906], &quot;features&quot;: [{&quot;bbox&quot;: [-123.29228210449219, 48.98423385620117, -122.52349853515625, 49.431983947753906], &quot;geometry&quot;: {&quot;coordinates&quot;: [[[-123.08216094970703, 48.98423385620117], [-123.16798400878906, 49.01095962524414], [-123.1717300415039, 49.01814270019531], [-123.26183319091797, 49.26627731323242], [-123.29228210449219, 49.37317657470703], [-123.29227447509766, 49.37322235107422], [-123.2904052734375, 49.37574768066406], [-123.24219512939453, 49.41034698486328], [-123.18131256103516, 49.43016815185547], [-123.17720794677734, 49.43143081665039], [-123.17680358886719, 49.43153762817383], [-123.1754150390625, 49.431884765625], [-123.17511749267578, 49.431922912597656], [-123.1744384765625, 49.431983947753906], [-123.17427825927734, 49.43198013305664], [-122.97808837890625, 49.42380905151367], [-122.66796112060547, 49.33233642578125], [-122.66764068603516, 49.33163833618164], [-122.52349853515625, 49.002296447753906], [-123.08216094970703, 48.98423385620117]]], &quot;type&quot;: &quot;Polygon&quot;}, &quot;id&quot;: &quot;0&quot;, &quot;properties&quot;: {}, &quot;type&quot;: &quot;Feature&quot;}], &quot;type&quot;: &quot;FeatureCollection&quot;});\n",
+       "\n",
+       "        \n",
+       "    \n",
+       "    geo_json_5fa1411ab480a88566984a73ec890603.bindTooltip(\n",
+       "    function(layer){\n",
+       "    let div = L.DomUtil.create(&#x27;div&#x27;);\n",
+       "    \n",
+       "    return div\n",
+       "    }\n",
+       "    ,{\n",
+       "  &quot;sticky&quot;: true,\n",
+       "  &quot;className&quot;: &quot;foliumtooltip&quot;,\n",
+       "});\n",
+       "                     \n",
+       "    \n",
+       "            geo_json_5fa1411ab480a88566984a73ec890603.addTo(map_cfaf00315204c37702817dd4e3a28a5c);\n",
+       "        \n",
+       "&lt;/script&gt;\n",
+       "&lt;/html&gt;\" style=\"position:absolute;width:100%;height:100%;left:0;top:0;border:none !important;\" allowfullscreen webkitallowfullscreen mozallowfullscreen></iframe></div></div>"
+      ],
+      "text/plain": [
+       "<folium.folium.Map at 0x70b097fb2830>"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import geopandas as gpd\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# Path to the boundary file\n",
+    "#boundary_path = \"../data/output/Burnaby_driving_boundary.geojson\"\n",
+    "#boundary_path = \"../data/output/Somerset_driving_boundary.geojson\"\n",
+    "#boundary_path = \"../data/output/Vancouver_driving_boundary.geojson\"\n",
+    "boundary_path = \"../data/output/all_Vancouver_driving_boundary.geojson\"\n",
+    "\n",
+    "print(f\"Loading boundary from {boundary_path}...\")\n",
+    "boundary_gdf = gpd.read_file(boundary_path)\n",
+    "\n",
+    "print(\"Plotting boundary...\")\n",
+    "# Explore gives an interactive map\n",
+    "boundary_gdf.explore()"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv (3.10.12)",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
